--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
+html,
+body,
+#viewDiv {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+  background-color: #6cc2ea;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#containerDiv {
+  padding: 10px;
+}
+#histogram-title {
+  font-size: 12pt;
+  text-align: center;
+  padding: 0px 0px 10px 0px;
+}
+#histogram {
+  width: 300px;
+  height: 200px;
+}
+#titleDiv {
+  padding: 10px;
+}
+#titleText {
+  font-size: 20pt;
+  font-weight: 60;
+  padding-bottom: 10px;
+}
+.labels {
+  padding: 5px;
+}
+.padding {
+  padding: 0px 0px 10px 0px;
+}
+#normalization-type {
+  width: 40%;
 }
